--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -3,7 +3,7 @@
 	width: 100%;
 	height: 100%;
 	background: var(--color-primary);
-	margin: 0 auto var(--spacing-large);
+	margin: 0 auto calc(var(--spacing-large) + 63px);  /* spacing large plus figcaption height */
 	display: flex;
 	justify-content: center;
 	box-shadow: 0 0 7px grey;
